# docker-fastapi

./: .gitlab-ci.yml  Dockerfile  README.md  myscript.sh  pyproject.toml
docker_fastapi/: app.py  dao.py  enums.py  main.py  models.py  router.py  schemas.py
